package Client;

public class Location {

    private String provincia;
    private String barrio;
    private String calle;

    public String getProvincia(){
        return this.provincia;
    }

    public String getBarrio(){
        return this.barrio;
    }
    
    public String getCalle(){
        return this.calle;
    }
}
