package CompanyUtils;

import Client.Client;
import Robots.Robot;
import Robots.src.main.java.Client.Client;
import Robots.src.main.java.Robots.Robot;

import java.util.*;


public class Company {
    private ArrayList<Robot> robots;
    private ArrayList<Client> clients;
    private CompanyUtils.PaymentModule payementModule;
    private CompanyUtils.ServiceManagement serviceManagement;


    public void createOrderPending(){


    }
}
