package Robots.src.main.java.Order;

public enum CleanType {
    SIMPLE, COMPLEJA
}
