package Services;

public class Classic extends Service {

    public Classic(){
        this.cleaningQuantity = -1;
        this.orderingQuantity = 3;
        this.orderValue = 0;
        this.maxDebt = 2000;
    }
    
}