package Services;

public class Platinum extends Service {

    public Platinum(){
        this.cleaningQuantity = -1;
        this.orderingQuantity = -1;
        this.orderValue = 0;
        this.maxDebt = orderValue;
    }
    
}
