@startuml
'https://plantuml.com/class-diagram

class Client {
    - Service service;
    - Location location;
}

class Location{
    - int height;
    - String street;
    - String area;
    - int floor;
    - int department;

    + Location();
}
abstract Robot{
    - boolean canOrder;
}
class S031RTY{}
class K311Yfu{}
class P011H{}
class K311Ya{}
class K311Yfl{}

interface OrderingRobot{
    + void Order()
}
interface ShiningRobot{
    + void Shine()
}

abstract Service{
    - int OrderingQuantity;
    - int CleaningQuantity;
}
class Platinum{}
class Classic{}
class Economic{}

class Company{

}
class Order{
    - CleanType cleanType;
    - boolean wantsOrdering;
    - String surfaceType;
}
enum CleanType{
    SIMPLE,
    COMPLEJA;
}

class System{

}

Service <|-- Platinum
Service <|-- Classic
Service <|-- Economic

Company *-- System
Company *-- Robot
Company *-- Client
Company <-- Order

Robot <|--- K311Yfl
Robot <|--- K311Yfu
Robot <|--- P011H
Robot <|--- K311Ya
Robot <|--- S031RTY

ShiningRobot <.. K311Yfu
ShiningRobot <.. P011H
ShiningRobot <.. K311Ya
OrderingRobot <.. K311Yfu
OrderingRobot <.. K311Ya
OrderingRobot <.. S031RTY

Client *-- Service
Client *-- Location

Order *-- CleanType

System <-- Order
@enduml